--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -56,11 +56,11 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
-binary_format/embed_pck=false
+debug/export_console_wrapper=0
+binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
-texture_format/etc=false
+texture_format/etc=true
 texture_format/etc2=false
 binary_format/architecture="x86_64"
 codesign/enable=false
